Made the todo-list container a scrollbox on overflow. Fixed some bugs

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -20,17 +20,17 @@
 
 .footer {
   background-color: #1f2937;
-  margin-top: 47px;
   padding: 20px;
   text-align: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #e5e7eb;
   font-size: 17px;
+  margin-top: 81px;
 }
 
 .github_icon {
   float: left;
-  margin-top: -47px;
+  margin-top: -10px;
   margin-left: 830px;
   text-decoration: none;
 }
@@ -39,4 +39,6 @@
   color: white;
   text-decoration: none;
   text-decoration: underline #1f2937;
+  display: inline;
+  margin-right: 860px;
 }
