--- a/src/Components/Login-Signup/Signup.css
+++ b/src/Components/Login-Signup/Signup.css
@@ -62,8 +62,14 @@
   margin-top: -10px;
 }
 
-.footer {
-  margin-top: 100pxpx;
+.footer-signup {
+  background-color: #1f2937;
+  padding: 20px;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #e5e7eb;
+  font-size: 17px;
+  margin-top: 188px;
 }
 
 .signup {
@@ -76,7 +82,8 @@
   display: inline-block;
   font-size: 20px;
   border-radius: 10px;
-  margin-left: 212px;
+  margin: auto;
+  display: block;
   margin-top: 40px;
   cursor: pointer;
 }
@@ -91,7 +98,6 @@
   display: inline-block;
   font-size: 15px;
   border-radius: 10px;
-  margin-left: 182px;
   margin-top: 30px;
   cursor: pointer;
 }
