--- a/src/Components/Todos/TodoList.css
+++ b/src/Components/Todos/TodoList.css
@@ -31,4 +31,7 @@
 
 .todo_container {
   margin-top: 30px;
+  min-height: 250px;
+  max-height: 250px;
+  overflow-y: scroll;
 }
